# codios

./: .gitignore  .snyk  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
backend/: .env.vpc.example  Dockerfile  auth.py  config.py  db.py  docker-compose.yml  main.py  requirements.txt  schema.local.sql  schema.sql  setup-vpc.sh
backend/policies/base/: identity.rego  scope.rego
backend/policies/examples/: finance.rego  healthcare.rego
backend/routers/: agents.py  alert_rules.py  audit.py  billing.py  contracts.py  enforce.py  health.py  keys.py  nonces.py  policies.py  sso.py  team.py  threat_detection.py  webhooks.py
backend/services/: audit_buffer.py  crypto.py  encryption.py  license.py  policy.py  redis_client.py  scheduler.py  webhook_dispatcher.py
cli/: package.json  tsconfig.json
cli/src/: index.ts  lib.ts
cli/src/commands/: agents.ts  issue.ts  keygen.ts  register.ts  verify.ts
docs/: authentication.md  business-continuity.md  supplier-risk.md
helm/codios/: .helmignore  Chart.yaml  values.yaml
helm/codios/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  (+3 more)
sdk-js/: package-lock.json  package.json  tsconfig.json
sdk-js/src/: contract.ts  index.ts  keys.ts
sdk-js/test/: contract.test.js
sdk-python/codios-sdk-python/: README.md  pyproject.toml
sdk-python/codios-sdk-python/codios/: __init__.py  contract.py  keys.py
sdk-python/codios-sdk-python/codios/middleware/: __init__.py  fastapi.py
sdk-python/codios-sdk-python/tests/: test_smoke.py
(+2 files in other folders)
