[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codios-sdk"
version = "0.1.0"
description = "Codios Python SDK — offline contract verification and FastAPI middleware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Midlantics", email = "support@midlantics.com" }]
keywords = ["a2a", "agent-security", "ai", "mcp", "codios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=43.0.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0"]

[project.urls]
Homepage = "https://codios.midlantics.com"
Documentation = "https://codios.midlantics.com/docs/sdk-python"
Repository = "https://github.com/Midlantics/codios"
Issues = "https://github.com/Midlantics/codios/issues"

[tool.hatch.build.targets.sdist]
include = ["codios/", "pyproject.toml", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["codios"]
